--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,6 +58,16 @@ h2 {
   color: #999;
 }
 
+h4 { 
+  font-size: 2.2em;
+  margin-bottom: 10px;
+  margin-left: 40px;
+}
+
+li {
+    border-top: 1px solid $grayLighter;
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -201,10 +211,6 @@ input, textarea, select, .uneditable-input {
 }
 .timestamp {
   color: $grayLight;
-}
-.gravatar {
-  float: left;
-  margin-right: 10px;
 }
 aside {
   textarea {
