--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,8 @@
     </div>
     <aside class="span4">
       <section>
-        <h3>Extreme Tech RSS</h3>
+        <img src='/assets/feed-icon-28x28.png' align='left'/>
+        <h4>Extreme Tech RSS</h4>
         <ul>
           <% for entry in RssfeedEntry.all(:limit => 10, :order => "published_at desc") %>
             <li><%= link_to h(entry.name), entry.url %></li>
