--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact JCarroll at <a href="mailto:mentatdewd@comcast.net"/a>Johns Email.
+  Contact JCarroll at <a href="mailto:jcarrollonline@gmail.com"/a>Johns Email.
 </p>
