--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,15 +48,15 @@
         <% end %>
     <% end %>
     <%= link_to help_path, :class => 'dock-item' do %>
-        <%= image_tag("history.png") %>
+        <%= image_tag("help.png") %>
         <%= content_tag(:span, 'Help') %>
     <% end %>
     <%= link_to about_path, :class => 'dock-item' do %>
-        <%= image_tag("calendar.png") %>
+        <%= image_tag("information_128.png") %>
         <%= content_tag(:span, 'About') %>
     <% end %>
     <%= link_to contact_path, :class => 'dock-item' do %>
-        <%= image_tag("calendar.png") %>
+        <%= image_tag("logo_128.png") %>
         <%= content_tag(:span, 'Contact') %>
     <% end %>
   </div>
