--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -310,3 +310,78 @@ img {
 .container {
   padding-top: 60px;
 }
+
+body {
+  font: 11px Arial, Helvetica, sans-serif;
+}
+img {
+  border: none;
+}
+
+/* dock - top */
+.dock {
+  position: relative;
+  height: 50px;
+  text-align: center;
+}
+.dock-container {
+  position: absolute;
+  height: 50px;
+/*background: #fff*/
+  padding-left: 20px;
+}
+a.dock-item {
+  display: inline;
+  background-color: transparent;
+  width: 40px;
+  color: #000;
+  position: absolute;
+  top: 0px;
+  text-align: center;
+  text-decoration: none;
+  font: bold 12px Arial, Helvetica, sans-serif;
+}
+.dock-item img {
+  color: rgba(255,255,255,0)  ;
+  border: none;
+  margin: 0px 0px 0px;
+  background-color: transparent;
+  width: 100%;
+}
+.dock-item span {
+  display: none;
+  padding-left: 0px;
+}
+
+/* dock2 - bottom */
+#dock2 {
+  width: 100%;
+  bottom: 0px;
+  position: absolute;
+  left: 0px;
+}
+.dock-container2 {
+  position: absolute;
+  height: 50px;
+  background: url(dock-bg.gif);
+  padding-left: 20px;
+}
+a.dock-item2 {
+  display: block;
+  font: bold 12px Arial, Helvetica, sans-serif;
+  width: 40px;
+  color: #000;
+  bottom: 0px;
+  position: absolute;
+  text-align: center;
+  text-decoration: none;
+}
+.dock-item2 span {
+  display: none;
+  padding-left: 20px;
+}
+.dock-item2 img {
+  border: none;
+  margin: 5px 10px 0px;
+  width: 100%;
+}
