--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag "application", media: "all" %>
   <%= javascript_include_tag 'application'%>
-  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js", "jquery_ujs.js" %>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js", "jquery_ujs.js" %>
   <%= csrf_meta_tags %>
   <script src="/assets/interface.js"></script>
   <script src="/assets/jquery.js"></script>
