enabled link and image imbedding in forum posts

--- a/app/views/forum_threads/_form.html.erb
+++ b/app/views/forum_threads/_form.html.erb
@@ -12,13 +12,11 @@
     <% end %>
 
     <div class="field">
-      <%= f.label :forum_thread_title %>
-      <br/>
+      <%= f.label :title %>
       <%= f.text_field :forum_thread_title %>
     </div>
     <div class="field">
-      <%= f.label :forum_thread_content %>
-      <br/>
+      <%= f.label :content %>
       <%= f.text_area :forum_thread_content %>
     </div>
 
