--- a/app/views/forum_threads/edit.html.erb
+++ b/app/views/forum_threads/edit.html.erb
@@ -1,5 +1,6 @@
 <h1>Editing</h1>
 
+<h4> We now support markdown in forum posts, see the help page for more info</h4>
 <%= render 'form' %>
 
 <%= link_to 'Show', @forum_thread %> |
