--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,18 @@
 <%= provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-Get help on JCarrollOnline.
+  <p>Forum Post Editing:</p>
+
+  <p>To embed and image in your post use:</p>
+
+  <p class="hll">
+    ![](http://somelink.jpg)
+  </p>
+
+  <p>Where somelink.jpg is a URL to an image file, examples: mypicture.jpg, or mypicture.png, or mypicture.gif</p>
+
+  <p> To embed a link just type the link as "http//somelink.com" and it will be noticed as a link and displayed that
+  way.</p>
+
+
 </p>
