--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,11 @@
 <%= provide(:title, 'About Us') %>
 <h1>About Us</h1>
 <p>
-This is my Blog, built with <a href="http://rubyonrails.org/">Ruby on Rails</a>.  This
-Blog is based on the <a href="http://railstutorial.org/">sample app</a> by Michael Hartl.
+This is my Website, built with <a href="http://rubyonrails.org/">Ruby on Rails</a>.  This
+Website is based on the <a href="http://railstutorial.org/">sample app</a> by Michael Hartl.
+
+<p>Mentatware&trade; is a trademark of Mentatware LLC</p>
+<p>JCarrollOnline&trade; is a trademark of Mentatware</p>
+
+<p>All content on this site &copy; 2012 Mentatware</p>
 </p>
