fixed deletion of forum threads and replies

--- a/app/views/forum_threads/_forum_thread.html.erb
+++ b/app/views/forum_threads/_forum_thread.html.erb
@@ -8,7 +8,7 @@
       <br>
 
       <div class="header_title"><%= forum_thread.forum_thread_title %></div>
-      <div align="right" class="header_created_at"><%= forum_thread.created_at.strftime("%r %B %d, %Y") %></div>
+      <div align="right" class="header_created_at"><%= forum_thread.created_at.strftime("%r %B %d, %Y %zpst") %></div>
     </header>
   </div>
   <div class="forum_thread_content">
