--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,6 @@
+<div class=breadcrumbs>
+<%= render_breadcrumbs %>
+</div>
 <footer class="footer">
   <small>
     <!-- <a href="http://railstutorial.org/">Rails Tutorial</a> -->
