--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -312,9 +312,9 @@ img {
   border: none;
 }
 
-.header {
-  padding-top: 0px;
-  margin-top: 0px;
+header {
+  padding-top: 10px;
+  margin-top: 10px;
 }
 
 .container {
@@ -323,7 +323,12 @@ img {
 
 body {
   font: 11px Arial, Helvetica, sans-serif;
+  //background-image:url('1207471022720623706American Eagle 2.svg.hi.png');
+  //background-position: center;
+  //background-repeat: no-repeat;
+  //background-size: 400px;
 }
+
 img {
   border: none;
 }
