--- a/app/views/forum_threads/index.html.erb
+++ b/app/views/forum_threads/index.html.erb
@@ -1,4 +1,5 @@
 <h1><%= get_forum_title(@forum_thread) %></h1>
+<h2><%= @forum_thread.forum_thread_title %></h2>
 
 <%=  nested_threads @forum_threads.arrange(:order => :created_at) %>
 
