--- a/app/views/forum_threads/new.html.erb
+++ b/app/views/forum_threads/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New Thread</h1>
+<% if params[:parent_id].nil? %>
+    <h1><%= @current_forum.forum_title %>:  New Thread</h1>
+<% else %>
+    <h1>Reply</h1>
+<% end %>
 
 <%= render 'form' %>
 
