implemented moderators and thread locking

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -401,6 +401,12 @@ a.dock-item2 {
   width: 100%;
 }
 
+.checkbox_field {
+  float: left;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
 // pygmentize styles
 .hll { background-color: #ffffcc }
 .c { color: #408080; font-style: italic } /* Comment */
