--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @micropost, :remote => true, :html => {:id => 'micropost_form'} do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field">
-      <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+      <%= f.text_area :content, placeholder: "Compose new micropost (140 char max)..." %>
     </div>
     <div class="actions">
       <%= f.submit "Post", class: "btn btn-large btn-primary" %>
