fixed pagination style

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,7 +6,6 @@ $grayLighter: #eaeaea;
 $grayLight: #eaeaea;
 $blue: #eaeaea;
 
-
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -113,6 +112,40 @@ footer {
       margin-left: 10px;
     }
   }
+}
+
+.pagination {
+  padding: 3px;
+  margin: 3px;
+}
+
+.pagination a {
+  padding: 2px 5px 2px 5px;
+  margin: 2px;
+  border: 1px solid #aaaadd;
+  text-decoration: none;
+  color: #000099;
+}
+
+.pagination a:hover, .pagination a:active {
+  border: 1px solid #000099;
+  color: #000;
+}
+
+.pagination span.current {
+  padding: 2px 5px 2px 5px;
+  margin: 2px;
+  border: 1px solid #000099;
+  font-weight: bold;
+  background-color: #000099;
+  color: #FFF;
+}
+
+.pagination span.disabled {
+  padding: 2px 5px 2px 5px;
+  margin: 2px;
+  border: 1px solid #eee;
+  color: #ddd;
 }
 
 /* miscellaneous */
@@ -339,12 +372,14 @@ img {
   height: 50px;
   text-align: center;
 }
+
 .dock-container {
   position: absolute;
   height: 50px;
 /*background: #fff*/
   padding-left: 20px;
 }
+
 a.dock-item {
   display: inline;
   background-color: transparent;
@@ -356,13 +391,15 @@ a.dock-item {
   text-decoration: none;
   font: bold 12px Arial, Helvetica, sans-serif;
 }
+
 .dock-item img {
-  color: rgba(255,255,255,0)  ;
+  color: rgba(255, 255, 255, 0);
   border: none;
   margin: 0px 0px 0px;
   background-color: transparent;
   width: 100%;
 }
+
 .dock-item span {
   display: none;
   padding-left: 0px;
@@ -375,12 +412,14 @@ a.dock-item {
   position: absolute;
   left: 0px;
 }
+
 .dock-container2 {
   position: absolute;
   height: 50px;
   background: url(dock-bg.gif);
   padding-left: 20px;
 }
+
 a.dock-item2 {
   display: block;
   font: bold 12px Arial, Helvetica, sans-serif;
@@ -391,10 +430,12 @@ a.dock-item2 {
   text-align: center;
   text-decoration: none;
 }
+
 .dock-item2 span {
   display: none;
   padding-left: 20px;
 }
+
 .dock-item2 img {
   border: none;
   margin: 5px 10px 0px;
@@ -408,64 +449,328 @@ a.dock-item2 {
 }
 
 // pygmentize styles
-.hll { background-color: #ffffcc }
-.c { color: #408080; font-style: italic } /* Comment */
-.err { border: 1px solid #FF0000 } /* Error */
-.k { color: #008000; font-weight: bold } /* Keyword */
-.o { color: #666666 } /* Operator */
-.cm { color: #408080; font-style: italic } /* Comment.Multiline */
-.cp { color: #BC7A00 } /* Comment.Preproc */
-.c1 { color: #408080; font-style: italic } /* Comment.Single */
-.cs { color: #408080; font-style: italic } /* Comment.Special */
-.gd { color: #A00000 } /* Generic.Deleted */
-.ge { font-style: italic } /* Generic.Emph */
-.gr { color: #FF0000 } /* Generic.Error */
-.gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.gi { color: #00A000 } /* Generic.Inserted */
-.go { color: #808080 } /* Generic.Output */
-.gp { color: #000080; font-weight: bold } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.gt { color: #0040D0 } /* Generic.Traceback */
-.kc { color: #008000; font-weight: bold } /* Keyword.Constant */
-.kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
-.kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
-.kp { color: #008000 } /* Keyword.Pseudo */
-.kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
-.kt { color: #B00040 } /* Keyword.Type */
-.m { color: #666666 } /* Literal.Number */
-.s { color: #BA2121 } /* Literal.String */
-.na { color: #7D9029 } /* Name.Attribute */
-.nb { color: #008000 } /* Name.Builtin */
-.nc { color: #0000FF; font-weight: bold } /* Name.Class */
-.no { color: #880000 } /* Name.Constant */
-.nd { color: #AA22FF } /* Name.Decorator */
-.ni { color: #999999; font-weight: bold } /* Name.Entity */
-.ne { color: #D2413A; font-weight: bold } /* Name.Exception */
-.nf { color: #0000FF } /* Name.Function */
-.nl { color: #A0A000 } /* Name.Label */
-.nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
-.nt { color: #008000; font-weight: bold } /* Name.Tag */
-.nv { color: #19177C } /* Name.Variable */
-.ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.w { color: #bbbbbb } /* Text.Whitespace */
-.mf { color: #666666 } /* Literal.Number.Float */
-.mh { color: #666666 } /* Literal.Number.Hex */
-.mi { color: #666666 } /* Literal.Number.Integer */
-.mo { color: #666666 } /* Literal.Number.Oct */
-.sb { color: #BA2121 } /* Literal.String.Backtick */
-.sc { color: #BA2121 } /* Literal.String.Char */
-.sd { color: #BA2121; font-style: italic } /* Literal.String.Doc */
-.s2 { color: #BA2121 } /* Literal.String.Double */
-.se { color: #BB6622; font-weight: bold } /* Literal.String.Escape */
-.sh { color: #BA2121 } /* Literal.String.Heredoc */
-.si { color: #BB6688; font-weight: bold } /* Literal.String.Interpol */
-.sx { color: #008000 } /* Literal.String.Other */
-.sr { color: #BB6688 } /* Literal.String.Regex */
-.s1 { color: #BA2121 } /* Literal.String.Single */
-.ss { color: #19177C } /* Literal.String.Symbol */
-.bp { color: #008000 } /* Name.Builtin.Pseudo */
-.vc { color: #19177C } /* Name.Variable.Class */
-.vg { color: #19177C } /* Name.Variable.Global */
-.vi { color: #19177C } /* Name.Variable.Instance */
-.il { color: #666666 } /* Literal.Number.Integer.Long */
+.hll {
+  background-color: #ffffcc
+}
+
+.c {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment */
+.err {
+  border: 1px solid #FF0000
+}
+
+/* Error */
+.k {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword */
+.o {
+  color: #666666
+}
+
+/* Operator */
+.cm {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Multiline */
+.cp {
+  color: #BC7A00
+}
+
+/* Comment.Preproc */
+.c1 {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Single */
+.cs {
+  color: #408080;
+  font-style: italic
+}
+
+/* Comment.Special */
+.gd {
+  color: #A00000
+}
+
+/* Generic.Deleted */
+.ge {
+  font-style: italic
+}
+
+/* Generic.Emph */
+.gr {
+  color: #FF0000
+}
+
+/* Generic.Error */
+.gh {
+  color: #000080;
+  font-weight: bold
+}
+
+/* Generic.Heading */
+.gi {
+  color: #00A000
+}
+
+/* Generic.Inserted */
+.go {
+  color: #808080
+}
+
+/* Generic.Output */
+.gp {
+  color: #000080;
+  font-weight: bold
+}
+
+/* Generic.Prompt */
+.gs {
+  font-weight: bold
+}
+
+/* Generic.Strong */
+.gu {
+  color: #800080;
+  font-weight: bold
+}
+
+/* Generic.Subheading */
+.gt {
+  color: #0040D0
+}
+
+/* Generic.Traceback */
+.kc {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Constant */
+.kd {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Declaration */
+.kn {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Namespace */
+.kp {
+  color: #008000
+}
+
+/* Keyword.Pseudo */
+.kr {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Keyword.Reserved */
+.kt {
+  color: #B00040
+}
+
+/* Keyword.Type */
+.m {
+  color: #666666
+}
+
+/* Literal.Number */
+.s {
+  color: #BA2121
+}
+
+/* Literal.String */
+.na {
+  color: #7D9029
+}
+
+/* Name.Attribute */
+.nb {
+  color: #008000
+}
+
+/* Name.Builtin */
+.nc {
+  color: #0000FF;
+  font-weight: bold
+}
+
+/* Name.Class */
+.no {
+  color: #880000
+}
+
+/* Name.Constant */
+.nd {
+  color: #AA22FF
+}
+
+/* Name.Decorator */
+.ni {
+  color: #999999;
+  font-weight: bold
+}
+
+/* Name.Entity */
+.ne {
+  color: #D2413A;
+  font-weight: bold
+}
+
+/* Name.Exception */
+.nf {
+  color: #0000FF
+}
+
+/* Name.Function */
+.nl {
+  color: #A0A000
+}
+
+/* Name.Label */
+.nn {
+  color: #0000FF;
+  font-weight: bold
+}
+
+/* Name.Namespace */
+.nt {
+  color: #008000;
+  font-weight: bold
+}
+
+/* Name.Tag */
+.nv {
+  color: #19177C
+}
+
+/* Name.Variable */
+.ow {
+  color: #AA22FF;
+  font-weight: bold
+}
+
+/* Operator.Word */
+.w {
+  color: #bbbbbb
+}
+
+/* Text.Whitespace */
+.mf {
+  color: #666666
+}
+
+/* Literal.Number.Float */
+.mh {
+  color: #666666
+}
+
+/* Literal.Number.Hex */
+.mi {
+  color: #666666
+}
+
+/* Literal.Number.Integer */
+.mo {
+  color: #666666
+}
+
+/* Literal.Number.Oct */
+.sb {
+  color: #BA2121
+}
+
+/* Literal.String.Backtick */
+.sc {
+  color: #BA2121
+}
+
+/* Literal.String.Char */
+.sd {
+  color: #BA2121;
+  font-style: italic
+}
+
+/* Literal.String.Doc */
+.s2 {
+  color: #BA2121
+}
+
+/* Literal.String.Double */
+.se {
+  color: #BB6622;
+  font-weight: bold
+}
+
+/* Literal.String.Escape */
+.sh {
+  color: #BA2121
+}
+
+/* Literal.String.Heredoc */
+.si {
+  color: #BB6688;
+  font-weight: bold
+}
+
+/* Literal.String.Interpol */
+.sx {
+  color: #008000
+}
+
+/* Literal.String.Other */
+.sr {
+  color: #BB6688
+}
+
+/* Literal.String.Regex */
+.s1 {
+  color: #BA2121
+}
+
+/* Literal.String.Single */
+.ss {
+  color: #19177C
+}
+
+/* Literal.String.Symbol */
+.bp {
+  color: #008000
+}
+
+/* Name.Builtin.Pseudo */
+.vc {
+  color: #19177C
+}
+
+/* Name.Variable.Class */
+.vg {
+  color: #19177C
+}
+
+/* Name.Variable.Global */
+.vi {
+  color: #19177C
+}
+
+/* Name.Variable.Instance */
+.il {
+  color: #666666
+}
+
+/* Literal.Number.Integer.Long */
