--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -2,5 +2,5 @@
   <ol id="feed_items" class="feed_items">
      <%= render partial: 'shared/feed_item', collection: @feed_items %>
   </ol>
-  <%= will_paginate @feed_items %>
+  <%= will_paginate @feed_items, :inner_window => 2, :outer_window => 1 %>
 <% end %>
