--- a/app/views/static_pages/privacypolicy.erb
+++ b/app/views/static_pages/privacypolicy.erb
@@ -1,6 +1,9 @@
 <!-- START PRIVACY POLICY CODE -->
 <div style="font-family:arial"><strong>What information do we collect?</strong> <br/><br/>We collect information from
-  you when you register on our site. <br/><br/>When ordering or registering on our site, as appropriate, you may be
+  you when you register on our site. <br/><br/>We do not collect any information from the Ringbuddy application, the
+  only information stored locally on the phone are contact id's and lookups, no information identifying a particular
+  contact is stored. We do not connect to the internet from the Ringbuddy application.
+  <br/><br/>When ordering or registering on our site, as appropriate, you may be
   asked to enter your: name or e-mail address. You may, however, visit our site anonymously.<br/><br/><strong>What do we
   use your information for?</strong> <br/><br/>Any of the information we collect from you may be used in one of the
   following ways: <br/><br/>; To personalize your experience<br/>(your information helps us to better respond to your
