--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if signed_in? %>
-    <div class="row">
+    <div class="row" xmlns="http://www.w3.org/1999/html">
       <aside class="span4">
         <section>
           <%= render 'shared/user_info' %>
@@ -28,6 +28,16 @@
         This is the home page for JCarrollOnline
       </h2>
 
+      <div class="center hero-unit">
+        <h3> The
+          <a href="https://play.google.com/store/apps/details?id=com.mentatware.ringbuddy&feature=search_result#?t=W251bGwsMSwyLDEsImNvbS5tZW50YXR3YXJlLnJpbmdidWRkeSJd">Ringbuddy</a>
+          application for Android has launched! </h3>
+        With Ringbuddy you can create a ringtone schedule for each of your contacts. For example, at 8am Tina's ringtone
+        will switch to an appropriate daytime ringtone, at 5pm Tina's ringtone will switch to a different ringtone of
+        your choosing, and at 11pm Tina's ringtone will switch to silent. Create a custom ringtone schedule for each of
+        your contacts, or with the handy All Contacts button set a custom schedule for all. <br> It's ringtone management
+        done right! <br> <br> Visit the <%= link_to "Ringbuddy", ringbuddy_path %> forum!
+      </div>
       <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
     </div>
     <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
