Revert "Added sandbox, ported project to windows Eclipse and Rails 4"
This reverts commit a6461bae53c483cac176082dc0a2dd507935ff1b.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -275,8 +275,8 @@ aside {
 }
 
 .field_with_errors {
-  @extend .control-group !optional;
-  @extend .error !optional;
+  @extend .control-group;
+  @extend .error;
 }
 
 /* forms */
