--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,6 +55,10 @@
         <%= image_tag("logo_128.png") %>
         <%= content_tag(:span, 'Contact') %>
     <% end %>
+    <%= link_to sandbox_path, :class => 'dock-item' do %>
+        <%= image_tag("sandbox.jpeg") %>
+        <%= content_tag(:span, 'Sandbox') %>
+    <% end %>
   </div>
 </div>
 
