--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -275,8 +275,8 @@ aside {
 }
 
 .field_with_errors {
-  @extend .control-group;
-  @extend .error;
+  @extend .control-group !optional;
+  @extend .error !optional;
 }
 
 /* forms */
@@ -288,6 +288,15 @@ input, textarea, select, .uneditable-input {
   height: auto;
   margin-bottom: 15px;
   @include box_sizing;
+}
+
+#counter {
+  width: auto;
+  float: left;
+  background-color: #fff;
+  border-color: #fff;
+  padding: 0px;
+  color: #aaa;
 }
 
 /* users index */
