Fixed the path to the unity 3d player

--- a/app/views/sandbox/index.html.erb
+++ b/app/views/sandbox/index.html.erb
@@ -57,7 +57,7 @@
 					break;
 				}
 			});
-			u.initPlugin(jQuery("#unityPlayer")[0], "WebPlayer.unity3d");
+			u.initPlugin(jQuery("#unityPlayer")[0], "<%= asset_path "WebPlayer.unity3d" %>");
 		});
 	</script>
 	<style type="text/css">
