--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
         <%= image_tag("user.png") %>
         <%= content_tag(:span, 'Users') %>
     <% end %>
-    <%= link_to forums_path, :class => 'dock-item' do %>
+    <%= link_to latest_forum_posts_path, :class => 'dock-item' do %>
         <%= image_tag("portfolio.png") %>
         <%= content_tag(:span, 'Forums') %>
     <% end %>
