--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -175,64 +175,6 @@ footer {
 *:first-child + html .digg_pagination {
   overflow: hidden; }
 
-.apple_pagination {
-  background: #f1f1f1;
-  border: 1px solid #e5e5e5;
-  text-align: center;
-  padding: 1em;
-  cursor: default; }
-.apple_pagination a, .apple_pagination span {
-  padding: 0.2em 0.3em; }
-.apple_pagination .disabled {
-  color: #aaaaaa; }
-.apple_pagination .current {
-  font-style: normal;
-  font-weight: bold;
-  background-color: #bebebe;
-  display: inline-block;
-  width: 1.4em;
-  height: 1.4em;
-  line-height: 1.5;
-  -moz-border-radius: 1em;
-  -webkit-border-radius: 1em;
-  border-radius: 1em;
-  text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
-.apple_pagination a {
-  text-decoration: none;
-  color: black; }
-.apple_pagination a:hover, .apple_pagination a:focus {
-  text-decoration: underline; }
-
-.flickr_pagination {
-  text-align: center;
-  padding: 0.3em;
-  cursor: default; }
-.flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
-  padding: 0.2em 0.5em; }
-.flickr_pagination .disabled {
-  color: #aaaaaa; }
-.flickr_pagination .current {
-  font-style: normal;
-  font-weight: bold;
-  color: #ff0084; }
-.flickr_pagination a {
-  border: 1px solid #dddddd;
-  color: #0063dc;
-  text-decoration: none; }
-.flickr_pagination a:hover, .flickr_pagination a:focus {
-  border-color: #003366;
-  background: #0063dc;
-  color: white; }
-.flickr_pagination .page_info {
-  color: #aaaaaa;
-  padding-top: 0.8em; }
-.flickr_pagination .previous_page, .flickr_pagination .next_page {
-  border-width: 2px; }
-.flickr_pagination .previous_page {
-  margin-right: 1em; }
-.flickr_pagination .next_page {
-  margin-left: 1em; }
-
 /* miscellaneous */
 
 .debug_dump {
@@ -338,6 +280,16 @@ input, textarea, select, .uneditable-input {
   }
 }
 
+.header_title {
+  font-size: 1.5em;
+  color: Blue;
+  margin: 5px 5px 5px 5px;
+}
+
+.header_created_at {
+    margin: 5px 5px 5px 5px;
+}
+
 /* microposts */
 
 .micropost {
@@ -413,7 +365,13 @@ tr:nth-child(odd) {
 
 table, th, td {
   border: 1px solid black;
-  text-align: left;
+  font-size: 1.1em;
+}
+
+th {
+    text-align: center;
+  font-size: 1.5em;
+
 }
 
 .columnTitle {
