--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 
 $grayMediumLight: #eaeaea;
 $grayLighter: #eaeaea;
-$grayLight: #eaeaea;
+$grayLight: #aaaaaa;
 $blue: #eaeaea;
 
 @mixin box_sizing {
@@ -298,7 +298,7 @@ input, textarea, select, .uneditable-input {
 
 .micropost {
   list-style: none;
-  margin: 20px 0px 0px 0px;
+  margin: 30px 0px 0px 0px;
 
   li {
     padding: 10px 0;
@@ -321,6 +321,8 @@ input, textarea, select, .uneditable-input {
 
 .timestamp {
   color: $grayLight;
+  float: left;
+  margin: 0px 20px 0px 0px;
 }
 
 aside {
