--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,20 +1,20 @@
 <li class="feed_item">
-  <span class=gravatar">
-  <%= link_to gravatar_for(micropost.user), micropost.user %>
-  </span>
-  <div>
-      <span class="user">
-        <%= link_to micropost.user.name, micropost.user %>
-      </span>
-    <span class="content"><%= micropost.content %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-  </span>
-    </div>
-  <% if current_user?(micropost.user) %>
-    <%= link_to "delete", micropost, method:  :delete,
-                                     confirm: "You sure?",
-                                     title:   micropost.content %>
-  <% end %>
+	<span class=gravatar">
+	<%= link_to gravatar_for(micropost.user), micropost.user %>
+	</span>
+	<div>
+	<span class="user">
+	<%= link_to micropost.user.name, micropost.user %>
+	</span>
+	<span class="content"><%= micropost.content %></span>
+	<span class="timestamp">
+	Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+	<div clas="deletemicropost">
+	<% if current_user?(micropost.user) %>
+	<%= link_to "delete", micropost, method:  :delete,
+	confirm: "You sure?",
+	title:   micropost.content %> <% end %>	</div> </span>
+
+	</div>
 </li>
 
